Goodbye fixtures.  Hello FactoryGirl.

--- a/spec/data/meter_row.html
+++ b/spec/data/meter_row.html
@@ -1,1 +1,1 @@
-<tr><th align="left">user_created</th><td align="right">4</td><td align="right">16</td></tr>
+<tr><th align="left">login_failed</th><td align="right">0</td><td align="right">0</td><td align="right">1</td></tr>
